@@ -667,3 +667,14 @@ Feature: Step - choose()
       | d[27].i |
       | d[32].i |
       | d[35].i |
+
+  Scenario: g_V_hasLabelXpersonX_chooseX_valuesXnameX_option1X_isXmarkoX_valuesXageXX_option2Xnone_valuesXnameXX
+    Given the modern graph
+    And the traversal of
+      """
+      g.V().hasLabel("person").choose(values("name")).
+        option(is("marko"), values("age")).
+        option(Pick.none, values("name"))
+      """
+    When iterated to list
+    Then the traversal will raise an error with message containing text of "Traversal is not allowed as a Pick token"
