@@ -70,6 +70,7 @@ This release also includes changes from <<release-3-7-XXX, 3.7.XXX>>.
 * Changed `choose` to only use the first `option` matched.
 * Added `Pick.unproductive` to allow for matches on unproductive predicates.
 * Changed `choose` to pass through traversers of unproductive predicates and unmatched choices.
+* Disallowed `Traversal` as a `Pick` token for `option` in `choose`.
 * Updated `OptionsStrategy` in `gremlin-python` to take options directly as keyword arguments.
 * Added static `instance()` method to `ElementIdStrategy` to an instance with the default configuration.
 * Updated `ElementIdStrategy.getConfiguration()` to help with serialization.
